--- a/UI/index.html
+++ b/UI/index.html
@@ -18,7 +18,8 @@
         <div class="center-children-in-parent items-column">
             <h1 class="tittle">My Diary</h1>
             <p class="sub-tittle">Dear Diary</p>
-            <p class="w-50"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, ipsum quod? Esse ipsum perspiciatis impedit consectetur repudiandae nisi quaerat iusto ad? Optio, illo maxime. Quis ipsum ratione deleniti eius consequuntur.</p>
+            <p class="w-50">Whatever is on your mind, Trust My Diary is here to help you keep your records.</p>
+            <span>Tell My Diary whats on your mind.</span>
         </div>
     </div>
 
