--- a/UI/index.html
+++ b/UI/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/generalstyles.css">
     <link rel="stylesheet" href="css/specific.css">
+    <base href="/UI" />
 </head>
 
 <body class="view">
