--- a/UI/index.html
+++ b/UI/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/generalstyles.css">
     <link rel="stylesheet" href="css/specific.css">
-    <base href="/" />
+    <base href="./" />
 </head>
 
 <body class="view">
