--- a/UI/index.html
+++ b/UI/index.html
@@ -70,7 +70,8 @@
     </section>
 
 
-    <script src="js/scripts.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/koolscripts.js"></script>
 
 </body>
 
